@@ -1,37 +1,38 @@
 body {
-    color: gray;
+    color: #dcdcdc;
     background-color: black;
     text-align: center;
     font-weight: bold;
 }
 
 a {
-    color: gray;
+    color: #dcdcdc;
     font-weight: bold;
     text-decoration: none;
 }
 
 select, input {
-    color: gray;
-    border: gray 1px solid;
+    color: #dcdcdc;
+    border: #dcdcdc 1px solid;
     background-color: black;
-    font-weight: bold;
 }
 
 fieldset {
-    border: gray 1px solid;
+    border: #dcdcdc 2px solid;
     font-weight: bold;
 }
 
 div#panel {
-    border: gray 1px solid;
+    position: fixed;
+}
+
+div#tuner {
     font-weight: bold;
     position: fixed;
-    padding: 5px;
+    margin: 5px;
 }
 
 div#player {
-    visibility: hidden;
     position: fixed;
-    padding: 6px;
+    margin: 5px;
 }
