@@ -9,13 +9,13 @@
     </head>
     <body>
         <div id='panel'>
-            <fieldset>
+            <fieldset id='tuner'>
                 <legend>網路電台</legend>
-                <input id='control' type='button' value='播放'/>
                 <select id="category"></select>
                 <select id="channel"></select>
+                <input id='control' type='button' value='▶'/>
             </fieldset>
+            <div id='player'></div>
         </div>
-        <div id='player'></div>
     </body>
 </html>
